--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,6 +1,7 @@
 setup-env:
 	pip install pipenv
 	pipenv install
+	pip install -r requirements.txt
 	python -m textblob.download_corpora
 
 make run:
